--- a/package.json
+++ b/package.json
@@ -5,19 +5,38 @@
   "repository": "github:Didstopia/homebridge-plugin-ilo",
   "homepage": "https://github.com/Didstopia/homebridge-plugin-ilo#readme",
   "bugs": "https://github.com/Didstopia/homebridge-plugin-ilo/issues",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "scripts": {
+    "release-patch": "npm run lint && npm run build && npm version patch && npm publish && git push && git push --tags",
+    "lint": "eslint src/**.ts --max-warnings=0",
+    "watch": "npm run build && npm link && nodemon",
+    "build": "rimraf ./dist && tsc",
+    "prepublishOnly": "npm run lint && npm run build"
+  },
   "keywords": [
     "homebridge-plugin",
     "iLO",
     "HPE"
   ],
   "engines": {
-    "homebridge": ">=0.2.5"
+    "node": ">=14.18.1",
+    "homebridge": ">=1.3.5"
   },
   "author": "Didstopia <support@didstopia.com>",
   "contributors": [
     "pawelwiecaszek"
   ],
   "license": "MIT",
-  "private": false
+  "private": false,
+  "devDependencies": {
+    "@types/node": "^16.11.12",
+    "@typescript-eslint/eslint-plugin": "^5.6.0",
+    "@typescript-eslint/parser": "^5.6.0",
+    "eslint": "^8.4.1",
+    "homebridge": "^1.3.8",
+    "nodemon": "^2.0.15",
+    "rimraf": "^3.0.2",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.3"
+  }
 }
